# db-s5-bmstu

./: .gitignore  Makefile  README.md
lab_01/: Makefile  add_constraints.sql  create_tables.sql  docker-compose.yml  gen_csv.py  init.sql  script.py
lab_01/csv/: file.csv  user_main.csv  user_post.csv  user_post_attachment.csv  user_post_comment.csv  user_subscription.csv
lab_01/diag/: diagram.dot
lab_01/sql/: alter_tables.sql  create_tables.sql
lab_02/: Makefile  queens.sql
lab_02/csv/: file.csv  user_main.csv  user_subscription.csv
lab_02/sql/: create_tables.sql  requests.sql
lab_03/: main.sql
lab_04/: README.md  main.sql
lab_05/: json  main.py  main.sql
lab_06/: .clangd  CMakeLists.txt  main.cpp
rk_03/: CMakeLists.txt  Makefile  create_tables.sql  main.cpp  task.sql
shared/: docker-compose.yml  gen_csv.py  gen_postgres.py
shared/csv/: file.csv  user_main.csv  user_post.csv  user_post_attachment.csv  user_post_comment.csv  user_subscription.csv
shared/json/: file.json  tmp.json  user_main.json  user_post.json  user_post_attachment.json  user_post_comment.json  user_subscription.json
shared/sql/: copy_tables.sql
